# long-math

./: CMakeLists.txt  longnumber.hpp  main.cpp  make.txt  pi.cpp  pi.hpp  tests.cpp
LongNumber/: CMakeLists.txt  longnumber.cpp
